tests/ui/traits/enum-negative-sync-impl.stderr
error[E0277]: `NoSync` cannot be shared between threads safely
  --> $DIR/enum-negative-sync-impl.rs:20:19
   |
LL |     requires_sync(container);
   |     ------------- ^^^^^^^^^ `NoSync` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Container`, the trait `Sync` is not implemented for `NoSync`
note: required because it appears within the type `Container`
  --> $DIR/enum-negative-sync-impl.rs:12:6
   |
LL | enum Container {
   |      ^^^^^^^^^
note: required by a bound in `requires_sync`
  --> $DIR/enum-negative-sync-impl.rs:16:21
   |
LL | fn requires_sync<T: Sync>(_: T) {}
   |                     ^^^^ required by this bound in `requires_sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
